# rag-backend

./: .gitignore  README.md  config.yaml  enums.py  file-status.json  logger.py  main.py  pyproject.toml  requirements.txt
src/api/: __init__.py  ask_question.py  embed_document.py  get_files.py  upload_document.py
src/rag_backend/: __init__.py
src/rag_backend/chunkers/: __init__.py  base.py  factory.py  markdown_chunker.py  pdf_chunker.py  table_chunker.py  text_chunker.py  word_chunker.py
src/rag_backend/config/: settings.py
src/rag_backend/embeding/: factory.py
src/rag_backend/parsers/: __init__.py  base.py  excel_parser.py  factory.py  markdown_parser.py  pdf_parser.py  text_parser.py  word_parser.py
src/rag_backend/util/: __init__.py  api_helper.py  file_helper.py  file_status.py  file_status_helper.py  util.py  vector_helper.py
src/rag_backend/vector_store/: base.py  chroma.py  factory.py  faiss.py
