[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG backend project for document parsing and chunking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "pypdf>=3.0.0",
    "markdown>=3.5.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "langchain-community>=0.0.0",
    "langchain-core>=0.1.0",
    "faiss-cpu>=1.7.0",
    "langchain>=1.2.15",
    "pdfplumber>=0.11.9",
    "chromadb>=1.5.8",
    "ollama>=0.6.1",
    "langchain-chroma>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
